add executors to pack and publish plugins and generator to create new plugins projects

--- a/apps/plugins/plugme/project.json
+++ b/apps/plugins/plugme/project.json
@@ -96,6 +96,12 @@
           "buildTarget": "plugins-plugme:build:production"
         }
       }
+    },
+    "publish": {
+      "executor": "@pluggy/plugin:publish"
+    },
+    "pack":{
+      "executor": "@pluggy/plugin:pack"
     }
   },
   "tags": []
