--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@swc/helpers": "~0.4.11",
     "@types/multer": "^1.4.7",
     "core-js": "^3.6.5",
     "multer": "^1.4.5-lts.1",
@@ -29,15 +30,21 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "15.2.1",
+    "@nrwl/devkit": "15.2.1",
     "@nrwl/eslint-plugin-nx": "15.2.1",
     "@nrwl/jest": "15.2.1",
+    "@nrwl/js": "15.2.1",
     "@nrwl/linter": "15.2.1",
     "@nrwl/nest": "15.2.1",
     "@nrwl/node": "15.2.1",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-plugin": "^15.2.1",
     "@nrwl/react": "15.2.1",
     "@nrwl/web": "15.2.1",
     "@nrwl/workspace": "15.2.1",
+    "@swc-node/register": "^1.4.2",
+    "@swc/cli": "~0.1.55",
+    "@swc/core": "^1.2.173",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
@@ -58,6 +65,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "15.2.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
