--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
@@ -15,7 +16,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@corneflex/pluggy-core": ["libs/core/src/index.ts"]
+      "@pluggy/core": ["libs/core/src/index.ts"],
+      "@pluggy/plugin": ["libs/plugin/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
