--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
+    "start": "nx run-many --target=serve --projects=server-pluggy-locator,host-pluggy",
     "build": "nx build",
     "test": "nx test"
   },
@@ -12,6 +12,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "@swc/helpers": "~0.4.11",
     "@types/multer": "^1.4.7",
     "core-js": "^3.6.5",
@@ -19,7 +20,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "6.4.1",
+    "redux-toolkit": "^1.1.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
@@ -47,7 +50,7 @@
     "@swc/core": "^1.2.173",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "18.7.1",
+    "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@types/react-is": "17.0.3",
